--- a/src/index.css
+++ b/src/index.css
@@ -47,12 +47,11 @@ code {
   line-height: 2;
 
   background: transparent;
-  border: 1px solid #3f3fa8;
   border-radius: 2px;
 }
 
 .book-item button:hover{
-  background:  #3f3fa8;
+  background:  #934b00;
   color: white;
 }
 
@@ -61,10 +60,30 @@ code {
 }
 
 
+.header{
+  background: #49220a;
+  height: 8vh;
+
+  color: white;
+  padding-left: 2vw;
+
+  display: flex;
+  align-items: center;
+
+}
+.header h1{
+  margin: 0;
+}
+
+.header img{
+  height: 6vh;
+  margin-right: 1vw;
+}
+
 /* button */
 .draw-border {
-  box-shadow: inset 0 0 0 2px #58afd1;
-  color: #58afd1;
+  box-shadow: inset 0 0 0 3px #934b00;
+  color: #934b00;
   -webkit-transition: color 0.25s 0.0833333333s;
   transition: color 0.25s 0.0833333333s;
   position: relative;
@@ -81,12 +100,12 @@ code {
   right: 0;
 }
 .draw-border::before {
-  border-bottom-width: 2px;
-  border-left-width: 2px;
+  border-bottom-width: 3px;
+  border-left-width: 3px;
 }
 .draw-border::after {
-  border-top-width: 2px;
-  border-right-width: 2px;
+  border-top-width: 3px;
+  border-right-width: 3px;
 }
 .draw-border:hover {
   color: #ffe593;
@@ -116,7 +135,7 @@ code {
   letter-spacing: 0.05rem;
 }
 .btn:focus {
-  outline: 2px dotted #55d7dc;
+  outline: 3px dotted #934b00;
 }
 
 
