--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,140 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.book-title a{
+  color: #bb6b00;
+  font-weight: 300 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.book-title a:hover{
+  text-decoration: underline;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.books-list{
+  padding-top:2vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.book-item{
+  flex: 0 0 26%;
+
+  border:1px solid #934b00;
+  color: #bb6b00;
+  margin: 10px;
+  height: 500px;
+
+  transition: transform 0.1s;
+  background: aliceblue;
+}
+
+.book-item:hover{
+  transition: transform 0.1s;
+  transform: scale(1.05);
+  box-shadow: 0 0 10px gray;
+}
+
+.book-item img{
+  height: 200px;
+}
+
+.book-item button{
+  width: 150px;
+  line-height: 2;
+
+  background: transparent;
+  border-radius: 2px;
+}
+
+.book-item button:hover{
+  background:  #934b00;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.book-item button:focus{
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.header{
+  background: #49220a;
+  height: 8vh;
+
+  color: white;
+  padding-left: 2vw;
+
+  display: flex;
+  align-items: center;
+
 }
+.header h1{
+  margin: 0;
+}
+
+.header img{
+  height: 6vh;
+  margin-right: 1vw;
+}
+
+/* button */
+.draw-border {
+  box-shadow: inset 0 0 0 3px #934b00;
+  color: #934b00;
+  -webkit-transition: color 0.25s 0.0833333333s;
+  transition: color 0.25s 0.0833333333s;
+  position: relative;
+}
+.draw-border::before, .draw-border::after {
+  border: 0 solid transparent;
+  box-sizing: border-box;
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  bottom: 0;
+  right: 0;
+}
+.draw-border::before {
+  border-bottom-width: 3px;
+  border-left-width: 3px;
+}
+.draw-border::after {
+  border-top-width: 3px;
+  border-right-width: 3px;
+}
+.draw-border:hover {
+  color: #ffe593;
+}
+.draw-border:hover::before, .draw-border:hover::after {
+  border-color: #ffe593;
+  -webkit-transition: border-color 0s, width 0.25s, height 0.25s;
+  transition: border-color 0s, width 0.25s, height 0.25s;
+  width: 100%;
+  height: 100%;
+}
+.draw-border:hover::before {
+  -webkit-transition-delay: 0s, 0s, 0.25s;
+  transition-delay: 0s, 0s, 0.25s;
+}
+.draw-border:hover::after {
+  -webkit-transition-delay: 0s, 0.25s, 0s;
+  transition-delay: 0s, 0.25s, 0s;
+}
+
+.btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  line-height: 1;
+  font: 700 1rem 'Roboto Slab', sans-serif;
+  letter-spacing: 0.05rem;
+}
+.btn:focus {
+  outline: 3px dotted #934b00;
+}
+
+
+/* button */
